  * Updated Russian translation for debconf template (closes: #361656)
  * Updated Dutch po-debconf translation (closes: #377254)
  * Applied patch of Martin Pitt which will create /var/run and
    /var/lock directory if missing. (closes: #376542)
  * Bumped debhelper compatibily to 5.
   - modified debian/control to reflect this change.

 -- Thijs Kinkhorst <thijs@debian.org>  Fri, 11 Aug 2006 12:01:23 +0200

mailman (0:2.1.8-1) unstable; urgency=low

  * New upstream release

 -- Lionel Elie Mamane <lmamane@debian.org>  Sun, 16 Apr 2006 15:16:02 +0200

mailman (0:2.1.7+2.1.8rc1-1) unstable; urgency=high

  * New upstream release
    - Update patches:
      03_documentation_source
      64_correct_html_nesting
      68_translation_update_nl
      71_date_overflows
      99_js_templates
    - Drop patches merged upstream:
      02_stolen_from_upstream_CVS
      23_fix_urls
      72_hyperarch_error_handling.dpatch
    - Bugs fixed upstream:
      - Fix XSS hole in private archive cgi-bin. (CVE-2006-1712)
  * Don't delete other package's ucf-managed configuration files
    (closes: #358575)

 -- Lionel Elie Mamane <lmamane@debian.org>  Tue, 11 Apr 2006 22:35:33 +0200

mailman (2.1.7-2) UNRELEASED; urgency=low

  * Integrate translations: (closes: #350491, #351759, #351947)
    vi, sv, ja, nl, it
  * Don't force archiver URL to end in a slash, yet ensure the default one
    has one because pipermail needs it. (closes: #350388)

 -- Lionel Elie Mamane <lmamane@debian.org>  Tue, 11 Apr 2006 20:35:20 +0200

mailman (2.1.7-1) unstable; urgency=low

  * New upstream release:
    - Update patches:
      71_date_overflows.dpatch
      76_fix-private-redirect.dpatch
      99_js_templates.dpatch
      53_disable_addons.dpatch
      68_translation_update_nl.dpatch
    - Drop patches merged upstream:
      60_french_archtocentry
      76_fix-private-redirect
    - Bugs fixed upstream:
      - Mailman loses header spam rules (closes: #309870)