@@ -36,6 +36,9 @@ mailman (1:2.1.8-2) unstable; urgency=low
   * Bumped debhelper compatibily to 5.
    - modified debian/control to reflect this change.
 
+  [ Paul Wise ]
+  * Add spamassassin example to the mm_cfg.py
+
  -- Thijs Kinkhorst <thijs@debian.org>  Fri, 11 Aug 2006 12:01:23 +0200
 
 mailman (0:2.1.8-1) unstable; urgency=low
